test: Post 도메인 Controller 및 Service 테스트 코드 개선
PostControllerTest:
- WebMvcTest 기반 통합 테스트로 전환
- Security 관련 Mock 빈 추가 (JwtAuthenticationFilter, IpBlockInterceptor 등)
- @Nested 클래스로 테스트 그룹화
- Spring Security Test 활용 (.with(user()), .with(csrf()))
- ReflectionTestUtils로 엔티티 필드 설정
- 게시글 CRUD, 좋아요, 스크랩, 임시저장 테스트 추가

PostServiceTest:
- 추가 테스트 케이스 작성
- Mock 의존성 보완
- 예외 처리 테스트 추가

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>